<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/next"
        android:layout_width="140dp"
        android:layout_height="53dp"
        android:text="@string/nextt3"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.899"
        tools:text="Next" />

    <Button
        android:id="@+id/previous"
        android:layout_width="165dp"
        android:layout_height="54dp"
        android:text="@string/previous3"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        tools:text="Previous" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="379dp"
        android:layout_height="56dp"
        android:text="@string/amount_risen_0k"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.312"
        tools:ignore="TextSizeCheck"
        tools:text="Amount risen: 0K" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="379dp"
        android:layout_height="56dp"
        android:text="@string/amount_due_02"
        android:textSize="34sp"
        tools:ignore="MissingConstraints,TextSizeCheck"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="312dp"
        tools:text="Amount due: 0$" />
</androidx.constraintlayout.widget.ConstraintLayout>